--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <div class="row">
       <div class="col-lg-6">
         <h1 id="h1-title">Meet new and interesting dogs nearby.</h1>
-        <button type="button">Download</button>
-        <button type="button">Download</button>
+        <button type="button" class="btn btn-dark">Download</button>
+        <button type="button" class="btn btn-outline-light">Download</button>
       </div>
     <div class="col-lg-6">
       <img src="images/iphone6.png" alt="iphone-mockup">
