--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <title>TinDog</title>
 
   <!-- CSS Files -->
-  <link rel="stylesheet" href="css/styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-  
+  <link rel="stylesheet" href="css/styles.css">
+
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&display=swap" rel="stylesheet">
   
-  <!-- JS scripts -->
+  <!-- Bootstrap scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>  
 
   <!-- Font Awesome -->
@@ -52,8 +52,8 @@
     <div class="row">
       <div class="col-lg-6">
         <h1 id="h1-title">Meet new and interesting dogs nearby.</h1>
-        <button type="button" class="btn btn-dark btn-lg">Download</button>
-        <button type="button" class="btn btn-outline-light btn-lg">Download</button>
+        <button type="button" class="btn btn-dark btn-lg"><i class="fab fa-apple"></i> Download</button>
+        <button type="button" class="btn btn-outline-light btn-lg"><i class="fab fa-google-play"></i> Download</button>
       </div>
     <div class="col-lg-6">
       <img src="images/iphone6.png" alt="iphone-mockup">
