--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&display=swap" rel="stylesheet">
-  
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
   <!-- Bootstrap scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>  
 
@@ -28,14 +29,14 @@
     
     <nav class="navbar navbar-expand-lg navbar-dark">
 
-        <a class="navbar-brand" href="#">TinDog</a>
+        <a class="navbar-brand" href="#">tindog</a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto">
+          <ul class="navbar-nav ms-auto fs-4">
             <li class="nav-item">
               <a class="nav-link" href="">Contact</a>
             </li>
@@ -51,12 +52,12 @@
     <!-- Title -->
     <div class="row">
       <div class="col-lg-6">
-        <h1 id="h1-title">Meet new and interesting dogs nearby.</h1>
-        <button type="button" class="btn btn-dark btn-lg"><i class="fab fa-apple"></i> Download</button>
-        <button type="button" class="btn btn-outline-light btn-lg"><i class="fab fa-google-play"></i> Download</button>
+        <h1 class="text-white" id="h1-title">Meet new and interesting dogs nearby.</h1>
+        <button type="button" class="btn btn-dark btn-lg download-btn"><i class="fab fa-apple"></i> Download</button>
+        <button type="button" class="btn btn-outline-light btn-lg download-btn"><i class="fab fa-google-play"></i> Download</button>
       </div>
     <div class="col-lg-6">
-      <img src="images/iphone6.png" alt="iphone-mockup">
+      <img class="dog-img" src="images/iphone6.png" alt="iphone-mockup">
     </div>
   
   
