adding some changes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700;900&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
   <!-- Bootstrap scripts -->
@@ -70,16 +70,23 @@
   <!-- Features -->
 
   <section id="features">
-
-    <h3>Easy to use.</h3>
-    <p>So easy to use, even your dog could do it.</p>
-
-    <h3>Elite Clientele</h3>
-    <p>We have all the dogs, the greatest dogs.</p>
-
-    <h3>Guaranteed to work.</h3>
-    <p>Find the love of your dog's life or your money back.</p>
-
+    <div class="row">
+      <div class="features-container col-lg-4">
+      <i class="fas fa-check-circle"></i>
+      <h3 class="features-titles">Easy to use.</h3>
+      <p>So easy to use, even your dog could do it.</p>
+      </div>
+      <div class="features-container col-lg-4">
+      <i class="fas fa-bullseye"></i>
+      <h3 class="features-titles">Elite Clientele</h3>
+      <p>We have all the dogs, the greatest dogs.</p>
+      </div>
+      <div class="features-container col-lg-4">
+      <i class="fas fa-heart"></i>
+      <h3 class="features-titles">Guaranteed to work.</h3>
+      <p>Find the love of your dog's life or your money back.</p>
+      </div>
+    </div>
   </section>
 
 
