changing bottoms view

--- a/index.html
+++ b/index.html
@@ -152,10 +152,12 @@
           </div>
           <div class="card-body">
             <h2>Free</h2>
-            <p>5 Matches Per Day</p>
-            <p>10 Messages Per Day</p>
-            <p>Unlimited App Usage</p>
-            <button type="button">Sign Up</button>
+            <ul class="list-unstyled">
+              <li>5 Matches Per Day</li>
+              <li>10 Messages Per Day</li>
+              <li>Unlimited App Usage</li>
+            </ul>
+            <button class="btn btn-lg btn-outline-dark" type="button">Sign Up</button>
           </div>
         </div>
       </div>
@@ -167,10 +169,12 @@
           </div>
           <div class="card-body">
             <h2>$49 / mo</h2>
-            <p>Unlimited Matches</p>
-            <p>Unlimited Messages</p>
-            <p>Unlimited App Usage</p>
-            <button type="button">Sign Up</button>
+            <ul class="list-unstyled">
+              <li>Unlimited Matches</li>
+              <li>Unlimited Messages</li>
+              <li>Unlimited App Usage</li>
+            </ul>
+            <button class="btn btn-lg btn-dark" type="button">Sign Up</button>
           </div>
         </div>
       </div>
@@ -182,11 +186,13 @@
           </div>
           <div class="card-body">
             <h2>$99 / mo</h2>
-            <p>Pirority Listing</p>
-            <p>Unlimited Matches</p>
-            <p>Unlimited Messages</p>
-            <p>Unlimited App Usage</p>
-            <button type="button">Sign Up</button>
+            <ul class="list-unstyled">
+              <li>Pirority Listing</li>
+              <li>Unlimited Matches</li>
+              <li>Unlimited Messages</li>
+              <li>Unlimited App Usage</li>
+            </ul>
+            <button class="btn btn-lg btn-dark" type="button">Sign Up</button>
 
           </div>
        </div>
