--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <button type="button" class="btn btn-dark btn-lg download-btn"><i class="fab fa-apple"></i> Download</button>
         <button type="button" class="btn btn-outline-light btn-lg download-btn"><i class="fab fa-google-play"></i> Download</button>
       </div>
-    <div class="col-lg-6">
+    <div class="col-lg-6" id="dog-img-container ">
       <img class="dog-img" src="images/iphone6.png" alt="iphone-mockup">
     </div>
   
