--- a/index.html
+++ b/index.html
@@ -208,9 +208,9 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h3 class="cta-h3">Find the True Love of Your Dog's Life Today.</h3>
+    <button class="btn btn-dark btn-lg download-btn" type="button"><i class="fab fa-apple"></i>Download</button>
+    <button class="btn btn-outline-light btn-lg download-btn" type="button"><i class="fab fa-google-play"></i>Download</button>
 
   </section>
 
