--- a/index.html
+++ b/index.html
@@ -72,17 +72,17 @@
   <section id="features">
     <div class="row">
       <div class="features-container col-lg-4">
-      <i class="fas fa-check-circle fa-4x"></i>
+      <i class="fas fa-check-circle fa-4x favi"></i>
       <h3 class="features-titles">Easy to use.</h3>
       <p>So easy to use, even your dog could do it.</p>
       </div>
       <div class="features-container col-lg-4">
-      <i class="fas fa-bullseye fa-4x"></i>
+      <i class="fas fa-bullseye fa-4x favi"></i>
       <h3 class="features-titles">Elite Clientele</h3>
       <p>We have all the dogs, the greatest dogs.</p>
       </div>
       <div class="features-container col-lg-4">
-      <i class="fas fa-heart fa-4x"></i>
+      <i class="fas fa-heart fa-4x favi"></i>
       <h3 class="features-titles">Guaranteed to work.</h3>
       <p>Find the love of your dog's life or your money back.</p>
       </div>
@@ -209,8 +209,8 @@
   <section id="cta">
 
     <h3 class="cta-h3">Find the True Love of Your Dog's Life Today.</h3>
-    <button class="btn btn-dark btn-lg download-btn" type="button"><i class="fab fa-apple"></i>Download</button>
-    <button class="btn btn-outline-light btn-lg download-btn" type="button"><i class="fab fa-google-play"></i>Download</button>
+    <button class="btn btn-dark btn-lg download-btn" type="button"><i class="fab fa-apple"></i> Download</button>
+    <button class="btn btn-outline-light btn-lg download-btn" type="button"><i class="fab fa-google-play"></i> Download</button>
 
   </section>
 
@@ -219,7 +219,8 @@
 
   <footer id="footer">
 
-    <p>© Copyright 2018 TinDog</p>
+    <i class="fab fa-twitter socmed"></i><i class="fab fa-facebook-f socmed"></i><i class="fab fa-instagram socmed"></i><i class="fas fa-envelope socmed"></i>
+    <p class="copyr">© Copyright 2018 TinDog</p>
 
   </footer>
 
