Making the code more refine

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 
   <section id="title">
-  <div class="container-fluid" id="title-container">
+  <div class="container-fluid">
     <!-- Nav Bar -->
     
     <nav class="navbar navbar-expand-lg navbar-dark">
@@ -52,11 +52,11 @@
     <!-- Title -->
     <div class="row">
       <div class="col-lg-6">
-        <h1 class="text-white" id="h1-title">Meet new and interesting dogs nearby.</h1>
+        <h1 class="text-white big-title">Meet new and interesting dogs nearby.</h1>
         <button type="button" class="btn btn-dark btn-lg download-btn"><i class="fab fa-apple"></i> Download</button>
         <button type="button" class="btn btn-outline-light btn-lg download-btn"><i class="fab fa-google-play"></i> Download</button>
       </div>
-    <div class="col-lg-6" id="dog-img-container ">
+    <div class="col-lg-6 dog-img-container ">
       <img class="dog-img" src="images/iphone6.png" alt="iphone-mockup">
     </div>
   
@@ -70,6 +70,7 @@
   <!-- Features -->
 
   <section id="features">
+  <div class="container-fluid">  
     <div class="row">
       <div class="features-container col-lg-4">
       <i class="fas fa-check-circle fa-4x favi"></i>
@@ -87,6 +88,7 @@
       <p>Find the love of your dog's life or your money back.</p>
       </div>
     </div>
+  </div>  
   </section>
 
 
@@ -207,21 +209,21 @@
   <!-- Call to Action -->
 
   <section id="cta">
-
-    <h3 class="cta-h3">Find the True Love of Your Dog's Life Today.</h3>
-    <button class="btn btn-dark btn-lg download-btn" type="button"><i class="fab fa-apple"></i> Download</button>
-    <button class="btn btn-outline-light btn-lg download-btn" type="button"><i class="fab fa-google-play"></i> Download</button>
-
+    <div class="container-fluid">
+      <h3 class="cta-h3">Find the True Love of Your Dog's Life Today.</h3>
+      <button class="btn btn-dark btn-lg download-btn" type="button"><i class="fab fa-apple"></i> Download</button>
+      <button class="btn btn-outline-light btn-lg download-btn" type="button"><i class="fab fa-google-play"></i> Download</button>
+    </div>
   </section>
 
 
   <!-- Footer -->
 
   <footer id="footer">
-
-    <i class="fab fa-twitter socmed"></i><i class="fab fa-facebook-f socmed"></i><i class="fab fa-instagram socmed"></i><i class="fas fa-envelope socmed"></i>
-    <p class="copyr">© Copyright 2018 TinDog</p>
-
+    <div class="container-fluid">
+      <i class="fab fa-twitter socmed"></i><i class="fab fa-facebook-f socmed"></i><i class="fab fa-instagram socmed"></i><i class="fas fa-envelope socmed"></i>
+      <p class="copyr">© Copyright 2018 TinDog</p>
+    </div>
   </footer>
 
 
