--- a/index.html
+++ b/index.html
@@ -74,17 +74,17 @@
     <div class="row">
       <div class="features-container col-lg-4">
       <i class="fas fa-check-circle fa-4x favi"></i>
-      <h3 class="features-titles">Easy to use.</h3>
+      <h3 class="h3-titles-informative">Easy to use.</h3>
       <p>So easy to use, even your dog could do it.</p>
       </div>
       <div class="features-container col-lg-4">
       <i class="fas fa-bullseye fa-4x favi"></i>
-      <h3 class="features-titles">Elite Clientele</h3>
+      <h3 class="h3-titles-informative">Elite Clientele</h3>
       <p>We have all the dogs, the greatest dogs.</p>
       </div>
       <div class="features-container col-lg-4">
       <i class="fas fa-heart fa-4x favi"></i>
-      <h3 class="features-titles">Guaranteed to work.</h3>
+      <h3 class="h3-titles-informative">Guaranteed to work.</h3>
       <p>Find the love of your dog's life or your money back.</p>
       </div>
     </div>
@@ -150,7 +150,7 @@
       <div class="pricing-card col-lg-4 col-md-6">
         <div class="card text-center">
           <div class="card-header">
-            <h3 class="prices-plans">Chihuahua</h3>
+            <h3 class="h3-titles-informative">Chihuahua</h3>
           </div>
           <div class="card-body">
             <h2 class="prices">Free</h2>
@@ -167,7 +167,7 @@
       <div class="pricing-card col-lg-4 col-md-6">
         <div class="card text-center">
           <div class="card-header">
-            <h3 class="prices-plans">Labrador</h3>
+            <h3 class="h3-titles-informative">Labrador</h3>
           </div>
           <div class="card-body">
             <h2 class="prices">$49 / mo</h2>
@@ -184,7 +184,7 @@
       <div class="pricing-card col-lg-4 col-md-12">
         <div class="card text-center">
           <div class="card-header">
-            <h3 class="prices-plans">Mastiff</h3>
+            <h3 class="h3-titles-informative">Mastiff</h3>
           </div>
           <div class="card-body">
             <h2 class="prices">$99 / mo</h2>
