setting costumes titles

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- Title -->
     <div class="row">
       <div class="col-lg-6">
-        <h1 class="text-white big-title">Meet new and interesting dogs nearby.</h1>
+        <h1 class="title big-title">Meet new and interesting dogs nearby.</h1>
         <button type="button" class="btn btn-dark btn-lg download-btn"><i class="fab fa-apple"></i> Download</button>
         <button type="button" class="btn btn-outline-light btn-lg download-btn"><i class="fab fa-google-play"></i> Download</button>
       </div>
@@ -210,7 +210,7 @@
 
   <section id="cta">
     <div class="container-fluid">
-      <h3 class="cta-h3">Find the True Love of Your Dog's Life Today.</h3>
+      <h3 class="title">Find the True Love of Your Dog's Life Today.</h3>
       <button class="btn btn-dark btn-lg download-btn" type="button"><i class="fab fa-apple"></i> Download</button>
       <button class="btn btn-outline-light btn-lg download-btn" type="button"><i class="fab fa-google-play"></i> Download</button>
     </div>
