--- a/index.html
+++ b/index.html
@@ -72,17 +72,17 @@
   <section id="features">
   <div class="container-fluid">  
     <div class="row">
-      <div class="features-container col-lg-4">
+      <div class="col-lg-4">
       <i class="fas fa-check-circle fa-4x favi"></i>
       <h3 class="h3-titles-informative">Easy to use.</h3>
       <p>So easy to use, even your dog could do it.</p>
       </div>
-      <div class="features-container col-lg-4">
+      <div class="col-lg-4">
       <i class="fas fa-bullseye fa-4x favi"></i>
       <h3 class="h3-titles-informative">Elite Clientele</h3>
       <p>We have all the dogs, the greatest dogs.</p>
       </div>
-      <div class="features-container col-lg-4">
+      <div class="col-lg-4">
       <i class="fas fa-heart fa-4x favi"></i>
       <h3 class="h3-titles-informative">Guaranteed to work.</h3>
       <p>Find the love of your dog's life or your money back.</p>
