changing testimonials titles, footer colors

--- a/index.html
+++ b/index.html
@@ -72,17 +72,17 @@
   <section id="features">
   <div class="container-fluid">  
     <div class="row">
-      <div class="col-lg-4">
+      <div class="features-container col-lg-4">
       <i class="fas fa-check-circle fa-4x favi"></i>
       <h3 class="h3-titles-informative">Easy to use.</h3>
       <p>So easy to use, even your dog could do it.</p>
       </div>
-      <div class="col-lg-4">
+      <div class="features-container col-lg-4">
       <i class="fas fa-bullseye fa-4x favi"></i>
       <h3 class="h3-titles-informative">Elite Clientele</h3>
       <p>We have all the dogs, the greatest dogs.</p>
       </div>
-      <div class="col-lg-4">
+      <div class="features-container col-lg-4">
       <i class="fas fa-heart fa-4x favi"></i>
       <h3 class="h3-titles-informative">Guaranteed to work.</h3>
       <p>Find the love of your dog's life or your money back.</p>
@@ -99,12 +99,12 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <h2 class="testimonials-h2">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+          <h2 class="title testimonials-h2">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
           <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
           <em>Pebbles, New York</em>
         </div>
         <div class="carousel-item">
-          <h2 class="testimonials-h2">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+          <h2 class="title testimonials-h2">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
           <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
           <em>Beverly, Illinois</em>
         </div>
@@ -222,7 +222,7 @@
   <footer id="footer">
     <div class="container-fluid">
       <i class="fab fa-twitter socmed"></i><i class="fab fa-facebook-f socmed"></i><i class="fab fa-instagram socmed"></i><i class="fas fa-envelope socmed"></i>
-      <p class="copyr">© Copyright 2018 TinDog</p>
+      <p>© Copyright 2018 TinDog</p>
     </div>
   </footer>
 
