--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <h2 class="title testimonials-h2">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+          <h2 class="title h2-title">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
           <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
           <em>Pebbles, New York</em>
         </div>
         <div class="carousel-item">
-          <h2 class="title testimonials-h2">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+          <h2 class="title h2-title">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
           <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
           <em>Beverly, Illinois</em>
         </div>
@@ -153,7 +153,7 @@
             <h3 class="h3-titles-informative">Chihuahua</h3>
           </div>
           <div class="card-body">
-            <h2 class="prices">Free</h2>
+            <h2 class="title h2-title text-dark">Free</h2>
             <ul class="list-unstyled">
               <li>5 Matches Per Day</li>
               <li>10 Messages Per Day</li>
@@ -170,7 +170,7 @@
             <h3 class="h3-titles-informative">Labrador</h3>
           </div>
           <div class="card-body">
-            <h2 class="prices">$49 / mo</h2>
+            <h2 class="title h2-title text-dark">$49 / mo</h2>
             <ul class="list-unstyled">
               <li>Unlimited Matches</li>
               <li>Unlimited Messages</li>
@@ -187,7 +187,7 @@
             <h3 class="h3-titles-informative">Mastiff</h3>
           </div>
           <div class="card-body">
-            <h2 class="prices">$99 / mo</h2>
+            <h2 class="title h2-title text-dark">$99 / mo</h2>
             <ul class="list-unstyled">
               <li>Pirority Listing</li>
               <li>Unlimited Matches</li>
