--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
   <section id="pricing">
     
-    <h2 class="prices">A Plan for Every Dog's Needs</h2>
+    <h2 class="h2-title prices">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
     
     <div class="row">
@@ -153,7 +153,7 @@
             <h3 class="h3-titles-informative">Chihuahua</h3>
           </div>
           <div class="card-body">
-            <h2 class="title h2-title text-dark">Free</h2>
+            <h2 class="title h2-title prices">Free</h2>
             <ul class="list-unstyled">
               <li>5 Matches Per Day</li>
               <li>10 Messages Per Day</li>
@@ -170,7 +170,7 @@
             <h3 class="h3-titles-informative">Labrador</h3>
           </div>
           <div class="card-body">
-            <h2 class="title h2-title text-dark">$49 / mo</h2>
+            <h2 class="title h2-title prices">$49 / mo</h2>
             <ul class="list-unstyled">
               <li>Unlimited Matches</li>
               <li>Unlimited Messages</li>
@@ -187,9 +187,9 @@
             <h3 class="h3-titles-informative">Mastiff</h3>
           </div>
           <div class="card-body">
-            <h2 class="title h2-title text-dark">$99 / mo</h2>
+            <h2 class="title h2-title prices">$99 / mo</h2>
             <ul class="list-unstyled">
-              <li>Pirority Listing</li>
+              <li>Priority Listing</li>
               <li>Unlimited Matches</li>
               <li>Unlimited Messages</li>
               <li>Unlimited App Usage</li>
