applying selector to erase some innecesary classes

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- Title -->
     <div class="row">
       <div class="col-lg-6">
-        <h1 class="title big-title">Meet new and interesting dogs nearby.</h1>
+        <h1 class="title">Meet new and interesting dogs nearby.</h1>
         <button type="button" class="btn btn-dark btn-lg download-btn"><i class="fab fa-apple"></i> Download</button>
         <button type="button" class="btn btn-outline-light btn-lg download-btn"><i class="fab fa-google-play"></i> Download</button>
       </div>
@@ -73,17 +73,17 @@
   <div class="container-fluid">  
     <div class="row">
       <div class="features-container col-lg-4">
-      <i class="fas fa-check-circle fa-4x favi"></i>
+      <i class="fas fa-check-circle fa-4x"></i>
       <h3 class="h3-titles-informative">Easy to use.</h3>
       <p>So easy to use, even your dog could do it.</p>
       </div>
       <div class="features-container col-lg-4">
-      <i class="fas fa-bullseye fa-4x favi"></i>
+      <i class="fas fa-bullseye fa-4x"></i>
       <h3 class="h3-titles-informative">Elite Clientele</h3>
       <p>We have all the dogs, the greatest dogs.</p>
       </div>
       <div class="features-container col-lg-4">
-      <i class="fas fa-heart fa-4x favi"></i>
+      <i class="fas fa-heart fa-4x"></i>
       <h3 class="h3-titles-informative">Guaranteed to work.</h3>
       <p>Find the love of your dog's life or your money back.</p>
       </div>
@@ -142,7 +142,7 @@
 
   <section id="pricing">
     
-    <h2 class="h2-title prices">A Plan for Every Dog's Needs</h2>
+    <h2 class="h2-title">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
     
     <div class="row">
@@ -153,7 +153,7 @@
             <h3 class="h3-titles-informative">Chihuahua</h3>
           </div>
           <div class="card-body">
-            <h2 class="title h2-title prices">Free</h2>
+            <h2 class="title h2-title">Free</h2>
             <ul class="list-unstyled">
               <li>5 Matches Per Day</li>
               <li>10 Messages Per Day</li>
@@ -170,7 +170,7 @@
             <h3 class="h3-titles-informative">Labrador</h3>
           </div>
           <div class="card-body">
-            <h2 class="title h2-title prices">$49 / mo</h2>
+            <h2 class="title h2-title">$49 / mo</h2>
             <ul class="list-unstyled">
               <li>Unlimited Matches</li>
               <li>Unlimited Messages</li>
@@ -187,7 +187,7 @@
             <h3 class="h3-titles-informative">Mastiff</h3>
           </div>
           <div class="card-body">
-            <h2 class="title h2-title prices">$99 / mo</h2>
+            <h2 class="title h2-title">$99 / mo</h2>
             <ul class="list-unstyled">
               <li>Priority Listing</li>
               <li>Unlimited Matches</li>
@@ -221,7 +221,7 @@
 
   <footer id="footer">
     <div class="container-fluid">
-      <i class="fab fa-twitter socmed"></i><i class="fab fa-facebook-f socmed"></i><i class="fab fa-instagram socmed"></i><i class="fas fa-envelope socmed"></i>
+      <i class="fab fa-twitter"></i><i class="fab fa-facebook-f"></i><i class="fab fa-instagram"></i><i class="fas fa-envelope"></i>
       <p>© Copyright 2018 TinDog</p>
     </div>
   </footer>
