--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
 
-  <section id="title">
+  <section class="colored-section" id="title">
   <div class="container-fluid">
     <!-- Nav Bar -->
     
@@ -69,7 +69,7 @@
 
   <!-- Features -->
 
-  <section id="features">
+  <section class="white-section" id="features">
   <div class="container-fluid">  
     <div class="row">
       <div class="features-container col-lg-4">
@@ -94,7 +94,7 @@
 
   <!-- Testimonials -->
 
-  <section id="testimonials">
+  <section class="colored-section" id="testimonials">
 
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
@@ -129,7 +129,7 @@
 
   <!-- Press -->
 
-  <section id="press">
+  <section class="colored-section" id="press">
     <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
     <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
     <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
@@ -140,7 +140,7 @@
 
   <!-- Pricing -->
 
-  <section id="pricing">
+  <section class="white-section" id="pricing">
     
     <h2 class="h2-title">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
@@ -208,7 +208,7 @@
 
   <!-- Call to Action -->
 
-  <section id="cta">
+  <section class="colored-section" id="cta">
     <div class="container-fluid">
       <h3 class="title">Find the True Love of Your Dog's Life Today.</h3>
       <button class="btn btn-dark btn-lg download-btn" type="button"><i class="fab fa-apple"></i> Download</button>
@@ -219,7 +219,7 @@
 
   <!-- Footer -->
 
-  <footer id="footer">
+  <footer class="white-section" id="footer">
     <div class="container-fluid">
       <i class="fab fa-twitter"></i><i class="fab fa-facebook-f"></i><i class="fab fa-instagram"></i><i class="fas fa-envelope"></i>
       <p>© Copyright 2018 TinDog</p>
