--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
   <section class="white-section" id="pricing">
     
-    <h2 class="h2-title">A Plan for Every Dog's Needs</h2>
+    <h2 class="title h2-title">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
     
     <div class="row">
